buildscript {
    ext.kotlin_version = '1.8.10'
    repositories {
        google()
        mavenCentral()
    }

    dependencies {
        classpath 'com.android.tools.build:gradle:8.2.0'
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
        classpath 'com.google.gms:google-services:4.4.0'
    }
}

allprojects {
    repositories {
        google()
        mavenCentral()
    }
}

rootProject.buildDir = '../build'
subprojects {
    project.buildDir = "${rootProject.buildDir}/${project.name}"
}
subprojects {
    project.evaluationDependsOn(':app')
}

tasks.register("clean", Delete) {
    delete rootProject.buildDir
}

// Add this to handle Java version compatibility
tasks.withType(JavaCompile) {
    options.release = 8
}

// Configure Gradle JVM args to handle newer Java versions
if (JavaVersion.current() >= JavaVersion.VERSION_17) {
    tasks.withType(JavaCompile) {
        options.compilerArgs += ["--enable-preview"]
    }
}